# actix-raft-scaffold

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs.tonic
config/: application.conf  application.toml  reference.conf  reference.toml
examples/: wip-grpc.rs  wip-grpc.rs.HOLD  wip-http.rs
proto/: cluster_api.proto  cluster_entity.proto  common.proto  raft.old-proto
src/: cluster.rs  config.rs  fib.rs  lib.rs  network.rs  raft.rs  raft_system.rs  ring.rs  storage.rs
src/network/: messages.rs  mod.rs  network.rs  node.rs  proximity.rs  state.rs  summary.rs
src/network/node/: local.rs  proximity.rs  remote.rs
src/ports/: grpc.rs  mod.rs
src/ports/http/: entities.rs  mod.rs  routes.rs
src/raft/: builder.rs  network.rs  system.rs
src/raft/network/: node.rs  proximity.rs
src/raft/network/node/: local.rs  remote.rs
src/server/: mod.rs
src/server/http/: entities.rs  mod.rs  routes.rs
static/: index.html
tests/: initialization.rs  test_generic_actor.rs.HOLD  test_network.rs
tests/fixtures/: controller.rs.HOLD  dev.rs  memory_storage.rs  mod.rs
tmp/: api.cluster.rs
