[package]
name = "actix-raft-scaffold"
version = "0.0.1"
authors = ["Damon Rolfs <drolfs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "wip-http"
path = "examples/wip-http.rs"

[dev-dependencies]
anyhow = "1.0"
mockito = "0.25"

[dependencies]
actix-web = "1.0.9"
actix-http = "0.2.11"
actix-web-actors = "1.0.2"
actix-web-codegen = "0.2"
actix-cors = "0.1.0"
actix-files = "0.1.6"
actix-server = "0.6"
http = "0.1.17"
tempfile = "3"
#frunk = "0.3"
#hash_ring = "0.1"
hash_ring = { git = "https://github.com/oronsh/rust-hash-ring.git"}
byteorder = "1.3"
bytes = "0.4"
rust-crypto = "0.2"
fasthash = "0.4"
config = "0.9"
#rocksdb = "0.13"

actix = "0.8"
actix-rt = "1.0.0"
actix-raft = "0.4"
tokio = "0.1"
#tokio = { version = "0.2", features = ["macros", "sync", "stream", "time"]}
#tokio-util = { version = "0.3", features = ["codec"] }
#tokio = { version = "0.2", features = ["macros"] }
futures = "0.1"
rayon = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.5"
#rmp = "0.8"
#rmp-serde = "0.14"
serde_cbor = "0.11"
log = "0.4"
env_logger = "0.7"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
tracing-timing = "0.4"
structopt = "0.3"
#hocon = "0.3"
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.1.42" }
rand = "0.7"
thiserror = "1.0"
strum = "0.18"
strum_macros = "0.18"
reqwest = "0.9"
encoding_rs = "0.8"
url = "1.2"
lazy_static = "1.4.0"

#prost = "0.6"
#prost-types = "0.6"
#tonic = "0.1"

#[build-dependencies]
#tonic-build = "0.1.0"